--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
 
 					<div id="swtype" class="group">
 							<div class="title">Swing type</div>
-							<input type="radio" id="sw2" name="swtyperb" checked="sw2"><label for="sw2">Two-arm</label>
-							<input type="radio" id="sw1" name="swtyperb" checked="sw1"><label for="sw1">One-arm</label>
+							<input type="radio" id="sw2" name="swtyperb" checked="sw2"><label for="sw2">2H</label>
+							<input type="radio" id="sw1" name="swtyperb" checked="sw1"><label for="sw1">1H</label>
 					</div>
 			<br/>
 
