--- a/index.html
+++ b/index.html
@@ -62,6 +62,12 @@
 							<input type="radio" id="sw2" name="swtyperb" checked="sw2"><label for="sw2">2H</label>
 							<input type="radio" id="sw1" name="swtyperb" checked="sw1"><label for="sw1">1H</label>
 					</div>
+
+					<div id="putype" class="group">
+							<div class="title">Pushup type (optional)</div>
+							<input type="radio" id="pup" name="putyperb" checked="pup"><label for="pup">Palms</label>
+							<input type="radio" id="puf" name="putyperb" checked="puf"><label for="puf">Fists</label>
+					</div>
 			<br/>
 
 		    <table>
