--- a/index.html
+++ b/index.html
@@ -42,6 +42,25 @@
 		<input id="startStop" value="Random" type="button" onClick="startStop()" style="width: 80px;"/>
 			
 		<div id="config">
+				<table style="width: 500px">
+						<tr>
+								<td style="width: 15%">
+										Series#
+								<td>
+										<input type="radio" id="series2" name="seriesrb" checked="series2"><label for="series2">2</label>
+										<input type="radio" id="series3" name="seriesrb" checked="series3"><label for="series3">3</label>
+										<input type="radio" id="series4" name="seriesrb" checked="series4"><label for="series4">4</label>
+										<input type="radio" id="series5" name="seriesrb" checked="series5"><label for="series5">5</label>
+								</td>
+						</tr>
+						<tr>
+								<td style="width: 15%">
+										Series#
+								<td>
+								</td>
+						</tr>	
+				</table>
+
 				<div id="series" class="group">
 						<div class="title">Series#</div>
 						<input type="radio" id="series2" name="seriesrb" checked="series2"><label for="series2">2</label>
