--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	<script type="text/javascript" src="myStorage.js"></script>
 	<script type="text/javascript" src="main2.js"></script>
 
-	<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
+	<link rel="stylesheet" href="bootstrap.min.css">
 	<link rel="stylesheet" href="main.css" />
 	<link rel="stylesheet" href="timeCircles/timeCircles.css" />
 </head>
