--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <link rel="icon" sizes="192x192" href="icon192.png">
 	<link rel="icon" sizes="128x128" href="icon128.png">
 	 
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script type="text/javascript" src="jquery.min.js"></script>
 
 	<script type="text/javascript" src="timeCircles/timeCircles.min.js"></script>
     <script type="text/javascript" src="jplayer/jquery.jplayer.min.js"></script>
