--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 ﻿<!doctype html>
-<html manifest="main.appcache">
+<!--<html manifest="main.appcache">-->
+<html>
 <head>
 	<!-- Mobile installtohomescreen -->
-    <title>Av Timer</title>
-    <meta name="application-name" content="Av Timer">
-    <meta name="apple-mobile-web-app-title" content="Av Timer">
+    <title>Q&D Timer</title>
+    <meta name="application-name" content="Q&D Timer">
+    <meta name="apple-mobile-web-app-title" content="Q&D Timer">
     <meta name="viewport" content="width=device-width">
     <meta name="mobile-web-app-capable" content="yes">
 
