--- a/index.html
+++ b/index.html
@@ -48,35 +48,35 @@
 								<td style="width: 15%">
 										Series#
 								<td>
-										<input type="radio" id="series2" name="seriesrb" checked="series2"><label for="series2">2</label>
-										<input type="radio" id="series3" name="seriesrb" checked="series3"><label for="series3">3</label>
-										<input type="radio" id="series4" name="seriesrb" checked="series4"><label for="series4">4</label>
-										<input type="radio" id="series5" name="seriesrb" checked="series5"><label for="series5">5</label>
+										<input type="radio" id="series2" name="seriesrb" checked="series2"><label class="radiolbl" for="series2">2</label>
+										<input type="radio" id="series3" name="seriesrb" checked="series3"><label class="radiolbl" for="series3">3</label>
+										<input type="radio" id="series4" name="seriesrb" checked="series4"><label class="radiolbl" for="series4">4</label>
+										<input type="radio" id="series5" name="seriesrb" checked="series5"><label class="radiolbl" for="series5">5</label>
 								</td>
 						</tr>
 						<tr>
 								<td style="width: 15%">
 										Reps/sets
 								<td>
-										<input type="radio" id="reps5" name="repsrb" checked="reps5"><label for="reps5">5/4</label>
-										<input type="radio" id="reps10" name="repsrb" checked="reps10"><label for="reps10">10/2</label>
-										<input type="radio" id="repsalt" name="repsrb" checked="repsalt"><label for="repsalt">Alternate</label>
+										<input type="radio" id="reps5" name="repsrb" checked="reps5"><label class="radiolbl" for="reps5">5/4</label>
+										<input type="radio" id="reps10" name="repsrb" checked="reps10"><label class="radiolbl" for="reps10">10/2</label>
+										<input type="radio" id="repsalt" name="repsrb" checked="repsalt"><label class="radiolbl" for="repsalt">Alternate</label>
 								</td>
 						</tr>	
 						<tr>
 								<td style="width: 15%">
 										Swing
 								<td>
-										<input type="radio" id="sw2" name="swtyperb" checked="sw2"><label for="sw2">2H</label>
-										<input type="radio" id="sw1" name="swtyperb" checked="sw1"><label for="sw1">1H</label>
+										<input type="radio" id="sw2" name="swtyperb" checked="sw2"><label class="radiolbl" for="sw2">2H</label>
+										<input type="radio" id="sw1" name="swtyperb" checked="sw1"><label class="radiolbl" for="sw1">1H</label>
 								</td>
 						</tr>	
 						<tr>
 								<td style="width: 15%">
 										Pushup (optional)
 								<td>
-										<input type="radio" id="pup" name="putyperb" checked="pup"><label for="pup">Palms</label>
-										<input type="radio" id="puf" name="putyperb" checked="puf"><label for="puf">Fists</label>
+										<input type="radio" id="pup" name="putyperb" checked="pup"><label class="radiolbl" for="pup">Palms</label>
+										<input type="radio" id="puf" name="putyperb" checked="puf"><label class="radiolbl" for="puf">Fists</label>
 								</td>
 						</tr>	
 				</table>
