--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <body onload="init()" style="width: 300px; height: 200px;">
 	<br/>
 	<div align="center">
-		<input id="rand" value="Random" type="button" onClick="rand()" style="width: 80px;"/>
+		<input id="rand" value="Random1" type="button" onClick="rand()" style="width: 80px;"/>
 			
 		<div id="config">
 				<table style="width: 500px">
