--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <body onload="init()" style="width: 300px; height: 200px;">
 	<br/>
 	<div align="center">
-		<input id="rand" value="Random" type="button" onClick="rand()" style="width: 80px;"/>
+		<input id="rand" value="Roll Dice" type="button" onClick="rand()" style="width: 80px;"/>
 			
 		<div id="config">
 				<table style="width: 500px">
@@ -71,7 +71,7 @@
 						</tr>	
 						<tr>
 								<td style="width: 15%">
-										Pushup (optional)
+										Pushup
 								<td>
 										<input type="radio" id="pup" name="putyperb"><label class="radiolbl" for="pup">Palms</label>
 										<input type="radio" id="puf" name="putyperb"><label class="radiolbl" for="puf">Fists</label>
