*** use planned times instead of set duration ***

--- a/index.html
+++ b/index.html
@@ -88,7 +88,9 @@
 
 		<br/>
 		<div id="keepUnlockedMessage" style="display: none">
-			<label class="keepUnlock">(Keep device UNLOCKED)</label>
+			<label class="keepUnlock">Keep device UNLOCKED.</label>
+			<label class="keepUnlock">Keep this window VISIBLE.</label>
+			<label class="keepUnlock">(Otherwise sound will be STOPPED)</label>
 		</div>
 
 		<div id="jplayerGong"></div>
