--- a/index.html
+++ b/index.html
@@ -94,9 +94,8 @@
 		</div>
 
 		<div id="jplayerGong"></div>
-		<div id="jplayerGong3"></div>
 		<div id="jplayerTicks3"></div>
-		<div id="jplayerMetronome"></div>
+		<div id="jplayerExclamation"></div>
 
 		<video id="dummyVideo" volume="0" width="100" height="100" loop>
 		<source src="video/DummyMovie.mp4" type="video/mp4">
