--- a/index.html
+++ b/index.html
@@ -93,10 +93,10 @@
 			<label class="keepUnlock">(Otherwise sound will be STOPPED)</label>
 		</div>
 
-		<div id="jplayerGong"></div>
-		<div id="jplayerTicks3"></div>
 		<div id="jplayerExclamation"></div>
-
+		<div id="jplayerCharge"></div>
+		<div id="jplayerEnd"></div>
+		
 		<video id="dummyVideo" volume="0" width="100" height="100" loop>
 		<source src="video/DummyMovie.mp4" type="video/mp4">
 		</video>
