--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 		<div id="keepUnlockedMessage" style="display: none">
 			<label class="keepUnlock">Keep device UNLOCKED.</label>
 			<label class="keepUnlock">Keep this window VISIBLE.</label>
-			<label class="keepUnlock">(Otherwise sound will be STOPPED)</label>
+			<label class="keepUnlock">(Otherwise sounds will STOP)</label>
 		</div>
 
 		<div id="jplayerExclamation"></div>
