--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Q&D Timer</title>
     <meta name="application-name" content="Q&D Timer">
     <meta name="apple-mobile-web-app-title" content="Q&D Timer">
-    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=300">
     <meta name="mobile-web-app-capable" content="yes">
 
     <!-- for ios 7 style -->
