--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 	<link rel="icon" sizes="128x128" href="icon128.png">
 	 
     <script type="text/javascript" src="jquery.min.js"></script>
+    <script type="text/javascript" src="js/jquery.longclick-1.0.min.js"></script>
 
     <script type="text/javascript" src="jplayer/jquery.jplayer.min.js"></script>
 	<script type="text/javascript" src="total-storage/jquery.total-storage.min.js"></script>
@@ -82,7 +83,7 @@
 
 		<input value="Start" type="button" onClick="startStop()" style="width: 80px;"/>
 
-		<div class="version">ver: <label id="documentVersion"></label></div>
+		<div class="version"><label id="versionTitle">ver:</label> <label id="version"></label></div>
 	</div>
 
 	<div id="run" style="text-align:center; display: none">
