--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
 		<input value="Start" type="button" onClick="startStop()" style="width: 80px;"/>
 
-		<div class="version"><label id="versionTitle" unselectable="on" onselectstart="return false;" onmousedown="return false;">version:</label> <label id="version"></label></div>
+		<div class="version"><label id="versionTitle">version:</label> <label id="version"></label></div>
 	</div>
 
 	<div id="run" style="text-align:center; display: none">
