--- a/jplayer.html
+++ b/jplayer.html
@@ -34,7 +34,8 @@ $(document).ready(function(){
 	// Create click handlers for the different tracks
 	$("#lala").click(function(e) {
 		my_jPlayer.jPlayer("setMedia", {
-			mp3: "https://abugov.github.io/qndtimer/audio/charge.ogg"
+			//mp3: "https://abugov.github.io/qndtimer/audio/charge.ogg"
+			mp3: "http://www.jplayer.org/audio/mp3/TSP-01-Cro_magnon_man.mp3"
 		});
 		return false;
 	});
@@ -53,7 +54,15 @@ $(document).ready(function(){
 
 		<div id="jquery_jplayer"></div>
 
-		<label id="lala">lala</label>
+
+
+
+		<label id="lala">lala1</label>
+
+
+
+
+		
 		<!-- Using the cssSelectorAncestor option with the default cssSelector class names to enable control association of standard functions using built in features -->
 
 		<div id="jp_container" class="demo-container">
