play from http because of Safari

--- a/jplayer.html
+++ b/jplayer.html
@@ -21,8 +21,9 @@ $(document).ready(function(){
 	});
 
 		my_jPlayer.jPlayer("setMedia", {
+			// Safari can't play from local or https
 			//mp3: "https://abugov.github.io/qndtimer/audio/charge.ogg"
-			mp3: "http://www.jplayer.org/audio/mp3/TSP-01-Cro_magnon_man.mp3"
+			mp3: "http://abugov.com/qndtimer/charge.ogg"
 		});
 
 });
