--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
 
 		<div id="jplayerExclamation"></div>
 		<div id="jplayerCharge"></div>
+		<div id="jplayerTickTock"></div>
 		<div id="jplayerEnd"></div>
 		
 		<video id="dummyVideo" volume="0" width="100" height="50" loop>
