move from ogg to mp3 in favor of Safari

--- a/jplayer.html
+++ b/jplayer.html
@@ -31,9 +31,10 @@ $(document).ready(function(){
 
 		my_jPlayer.jPlayer("setMedia", {
 			// Safari can't play from local or https
-			//mp3: "https://abugov.github.io/qndtimer/audio/charge.ogg"
-//			mp3: "http://abugov.com/qndtimer/charge.ogg"
-			mp3: "http://abugov.com/qndtimer/audio/ticktock.mp3"
+			mp3: "audio/ticktock.mp3"
+			// ok Safari:
+			//mp3: "https://abugov.github.io/qndtimer/audio/charge.mp3"
+			//mp3: "http://abugov.com/qndtimer/audio/ticktock.mp3"
 		});
 
 });
