--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
     <link rel="icon" sizes="192x192" href="icon192.png">
 	<link rel="icon" sizes="128x128" href="icon128.png">
 	 
-    <script type="text/javascript" src="jquery.min.js"></script>
+	<script type="text/javascript" src="jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/jquery.longclick-1.0.min.js"></script>
 
     <script type="text/javascript" src="jplayer/jquery.jplayer.min.js"></script>
@@ -32,7 +33,7 @@
 	<script type="text/javascript" src="myStorage.js"></script>
 	<script type="text/javascript" src="main2.js"></script>
 
-	<link rel="stylesheet" href="bootstrap.min.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
 	<link rel="stylesheet" href="main.css" />
 </head>
 
@@ -44,7 +45,10 @@
 			<input type="radio" id="sessionSnatch" name="sessionrb"><label class="radiolbl" for="sessionSnatch">Snatches</label>
 		</div>
 
-		<input id="rand" value="Roll Dice" type="button" onClick="rand()" style="width: 80px"/>
+		<br/>
+		<button type="button" onClick="rand()" class="btn btn-default btn-sm">Roll Dice</button>
+		<br/>
+		<br/>
 
 		<!-- Series number -->
 		<div class="configGroup" style="text-align:left; display: inline-block">
@@ -81,14 +85,31 @@
 			<input type="radio" id="domr" name="dominantsiderb" checked="checked"><label class="radiolbl" for="domr">Right</label>
 		</div>
 
-		<input value="Start" type="button" onClick="startStop()" style="width: 80px;"/>
+		<br/>
+		<button type="button" onClick="startStop()" class="btn btn-default btn-sm">Start</button>
+		<br/>
+		<br/>
 
 		<div class="version"><label id="versionTitle">version:</label> <label id="version"></label></div>
+
+		<div onClick="openCog()"><span class="glyphicon glyphicon-cog"></span> Settings</div>
 	</div>
 
-	<div id="run" style="text-align:center; display: none">
-		<input value="Cancel" type="button" onClick="startStop()" style="width: 80px;"/>
-		
+	<div id="cog" style="text-align:center; display: none">
+		<div class="configGroup" style="text-align:left; display: inline-block">
+			Set ending sound:
+			<br/>
+			<br/>
+			<input type="radio" id="endSoundCharge" name="endsoundrb" checked="checked"><label class="radiolbl" for="endSoundCharge">Charge</label>
+			<input type="radio" id="endSoundRace" name="endsoundrb"><label class="radiolbl" for="endSoundRace">Race</label>
+			<input type="radio" id="endSoundNone" name="endsoundrb"><label class="radiolbl" for="endSoundNone">None</label>
+		</div>
+
+		<br/>
+		<button type="button" onClick="closeCog()" class="btn btn-default btn-sm">Back</button>
+	</div>
+
+	<div id="run" style="text-align:center; display: none">		
 		<div class="plan">
 				<label id="elapsed">00:00</label> / <label id="totalTime">00:00</label><br/>
 				<label id="currentSeries">Swings series 1/2</label><br/>
@@ -101,8 +122,10 @@
 		</label>
 
 		<br/>
+		<button type="button" onClick="startStop()" class="btn btn-default btn-sm">Cancel</button>
+
+		<br/>
 		<div id="keepUnlockedMessage" style="display: none">
-			<label class="keepUnlock">Keep device UNLOCKED.</label>
 			<label class="keepUnlock">Keep this window VISIBLE.</label>
 			<label class="keepUnlock">(Otherwise sounds will STOP)</label>
 		</div>
@@ -111,9 +134,9 @@
 		<div id="jplayerCharge"></div>
 		<div id="jplayerTickTock"></div>
 		<div id="jplayerEnd"></div>
-		<div id="jplayer321go"></div>
+		<div id="jplayerRace"></div>
 		
-		<video id="dummyVideo" volume="0" width="100" height="50" loop>
+		<video id="dummyVideo" volume="0" width="50" height="50" loop>
 			<source src="video/DummyMovie.mp4" type="video/mp4">
 		</video>
 	</div>
