--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 	<script type="text/javascript" src="main2.js"></script>
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+	
 	<link rel="stylesheet" href="main.css" />
 </head>
 
@@ -46,10 +47,13 @@
 		</div>
 
 		<br/>
-		<button type="button" onClick="rand()" class="btn btn-default btn-sm">Roll Dice</button>
-		<br/>
-		<br/>
 
+		<button type="button" onClick="rand()" class="btn btn-default btn-sm">
+			<img src="img/dice.png"/>
+		</button>
+
+		<br/>
+		<br/>
 		<!-- Series number -->
 		<div class="configGroup" style="text-align:left; display: inline-block">
 			Number of series:
