--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
 	<link rel="icon" sizes="128x128" href="icon128.png">
 	 
 	<script type="text/javascript" src="jquery.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/jquery.longclick-1.0.min.js"></script>
 
     <script type="text/javascript" src="jplayer/jquery.jplayer.min.js"></script>
@@ -143,6 +142,7 @@
 		<div id="jplayerTickTock"></div>
 		<div id="jplayerEnd"></div>
 		<div id="jplayerRace"></div>
+		<div id="jplayerDice"></div>
 		
 		<video id="dummyVideo" volume="0" width="50" height="50" loop>
 			<source src="video/DummyMovie.mp4" type="video/mp4">
