video playsinline for Safari

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 		<div id="jplayerRace"></div>
 		<div id="jplayerDice"></div>
 		
-		<video id="dummyVideo" volume="0" width="50" height="50" loop>
+		<video id="dummyVideo" volume="0" width="50" height="50" loop playsinline>
 			<source src="video/DummyMovie.mp4" type="video/mp4">
 		</video>
 	</div>
