play alterate notification. fix series text

--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
 		<div id="jplayerExclamation"></div>
 		<div id="jplayerCharge"></div>
 		<div id="jplayerTickTock"></div>
+		<div id="jplayerAlternate"></div>
 		<div id="jplayerEnd"></div>
 		<div id="jplayerRace"></div>
 		<div id="jplayerDice"></div>
