--- a/index.html
+++ b/index.html
@@ -122,9 +122,9 @@
 				<label id="currentSeries">Swings series 1/2</label><br/>
 			<label class="big">
 				<label id="timer" class="timer">0</label><label class="timerSeconds">s</label><br/>
-				<label id="currentSet" class="now">Swings 5L</label></br>
+				<label id="currentSetLbl1" class="now">Swings</label>&nbsp;<label id="currentSetLbl2" class="now">5L</label></br>
 				Next:<br/>
-				<label id="nextSet">Rest</label><br/>
+				<label id="nextSetLbl1">Swings</label>&nbsp;<label id="nextSetLbl2">10</label><br/>
 			</label>
 		</label>
 
