--- a/index.html
+++ b/index.html
@@ -114,6 +114,8 @@
 		<br/>
 		<br/>
 		<div class="version"><label id="versionTitle">version:</label> <label id="version"></label></div>
+		<br/>
+		<br/>		
 	</div>
 
 	<div id="run" style="text-align:center; display: none">		
@@ -126,7 +128,7 @@
 				Next:<br/>
 				<label id="nextSetLbl1">Swings</label>&nbsp;<label id="nextSetLbl2">10</label><br/>
 			</label>
-		</label>
+		</div>
 
 		<br/>
 		<button type="button" onClick="startStop()" class="btn btn-default btn-sm">Cancel</button>
@@ -149,6 +151,36 @@
 			<source src="video/DummyMovie.mp4" type="video/mp4">
 		</video>
 	</div>
+
+
+
+
+
+
+<div id="finishModal" class="modal">
+
+  <!-- Modal content -->
+  <div class="modal-content">
+    <div class="modal-header">
+      <span class="closeModal">&times;</span>
+      <h2>Modal Header</h2>
+    </div>
+    <div class="modal-body">
+      <p>Some text in the Modal Body</p>
+      <div>
+		<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+			<input type="hidden" name="cmd" value="_s-xclick" />
+			<input type="hidden" name="hosted_button_id" value="G28SNACKFUUN4" />
+			<input type="image" src="1-2-paypal-donate-button-png-thumb.png" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
+		</form>
+	  </div>	
+    </div>
+  </div>
+
+</div>
+
+
+
 </body>
 </html>
 
